import java.util.Scanner;

public class LogIn {
    public static void login() {
        // Opretter en ny Scanner til input
        Scanner input = new Scanner(System.in);

        // Vi beder brugeren om et brugernavn og kodeord
        System.out.print("Indtast brugernavn: ");
        String username = input.nextLine();

        System.out.print("Indtast kodeord: ");
        String password = input.nextLine();

// antager at deres login info er korrekt
        System.out.println("Du er nu logget ind som " + username + "!");

        // Vi sender kunden til homepage
        // HovedMenu.menu();

    }

}
