import java.util.Scanner;

public class SignUp {
    public static void signUp() {
        // scanner input
        Scanner input = new Scanner(System.in);

        // Ber brugeren om et nyt brugernavn og kode
        System.out.print("Vælg et brugernavn: ");
        String username = input.nextLine();

        System.out.print("Vælg et kodeord: ");
        String password = input.nextLine();

        // konfirmation på at det var oprettelsen var en success
        System.out.println("Bruger oprettet! Du er nu logget ind som " + username + ".");

        // Vi sender brugeren til homepage
        // HovedMenu.menu();

    }


}
